tests/invalid/seq_compare_type_mismatch/main.py
def run_case() -> None:
    x: str = "hello"

    y: bytes = b"world"

    z: bool = x == y

if __name__ == "__main__":
    run_case()
